--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,1 +1,12 @@
 <h1><%= @student.to_s %></h1>
+<p>
+This student is currently
+<% if @student.active == false %>
+    inactive.
+<% else %>
+    active.
+<% end %>
+</p>
+<p>
+    <%= link_to "status", activate_student_path(@student) %>
+</p>
